# loggen-rs

./: .gitignore  .trivy.yml  AGENTS.md  Cargo.toml  LICENSE  Plan.md  README.md  flake.nix
.github/workflows/: release.yml  rust.yml  security.yml
benches/: benchmarks.rs
docs/: attack-gallery.md  cli-cheatsheet.md  configuration-reference.md  template-guide.md
examples/: attack-brute-force.yaml  attack-credential-stuffing.yaml  attack-ddos.yaml  attack-port-scan.yaml  attack-sqli-probe.yaml  example.yaml  file-output-enhanced.yaml  file-output.yaml  http-output.yaml  kafka-output.yaml  minimal.yaml  simulation-basic.yaml  simulation-file-output.yaml  simulation-with-templates.yaml  template-example.yaml
src/: cli.rs  config.rs  generator.rs  lib.rs  main.rs  output.rs
templates/: apache_combined.logtpl  nginx_combined.logtpl  syslog_rfc3164.logtpl
tests/unit/: cli.rs  main.rs  mod.rs  test_attack.rs  test_cli.rs  test_config.rs  test_date_filter.rs  test_generator.rs  test_output.rs  test_phase4.rs
