[package]
name = "loggen"
description = "a log generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1"
rand = "0.8"
rayon = "1"
regex = "1"
