[package]
name = "loggen"
description = "a log generator"
version = "0.4.1"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1"
rand = "0.8"
rayon = "1"
regex = "1"
ureq = "2"
serde_json = "1"
ctrlc = "3.4"

rdkafka = { version = "0.28", optional = true }

[features]
default = []
kafka = ["rdkafka"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
